changed html location

--- a/rscard/index.html
+++ b/rscard/index.html
@@ -1122,40 +1122,32 @@
                     <h2 class="section-title">My Interests</h2>
             
                     <div class="section-box">
-                        <p>I have a keen interest in photography. I was vice-president of the photography club during my time at
-                            university,
-                            and during this period I organised a number of very successful exhibitions and events both on and off
-                            campus.
-                            <br/>I also play the piano to grade 8 standard.</p>
+                        <!-- <p>Add text</p> -->
             
                         <ul class="interests-list">
                             <li>
-                                <i class="map-icon map-icon-bicycling"></i>
-                                <span>Bicycling</span>
+                                <i class="map-icon map-icon-airport"></i>
+                                <span>Traveling</span>
                             </li>
                             <li>
-                                <i class="map-icon map-icon-movie-theater"></i>
-                                <span>Watch Movies</span>
+                                <i class="map-icon map-icon-golf"></i>
+                                <span>Golfing</span>
                             </li>
                             <li>
-                                <i class="map-icon map-icon-ice-skating"></i>
-                                <span>Skating</span>
+                                <i class="map-icon map-icon-baseball"></i>
+                                <span>Baseball</span>
                             </li>
                             <li>
-                                <i class="map-icon map-icon-shopping-mall"></i>
-                                <span>Shopping</span>
+                                <i class="map-icon map-icon-boating"></i>
+                                <span>Boating</span>
                             </li>
                             <li>
-                                <i class="map-icon map-icon-tennis"></i>
-                                <span>Playing Tennis</span>
+                                <i class="map-icon map-icon-skiing"></i>
+                                <span>Skiing</span>
                             </li>
                             <li>
-                                <i class="map-icon map-icon-bowling-alley"></i>
-                                <span>Playing Bowling</span>
-                            </li>
-                            <li>
-                                <i class="map-icon map-icon-swimming"></i>
-                                <span>Swimming</span>
+                                <i class="map-icon map-icon-restaurant"></i>
+                                <span>Restaurants</span>
                             </li>
                         </ul>
                     </div>
