added github icon

--- a/rscard/index.html
+++ b/rscard/index.html
@@ -36,6 +36,7 @@
 
     <!-- Modernizer for detect what features the user’s browser has to offer -->
     <script type="text/javascript" src="js/libs/modernizr.js"></script>
+    <script src="https://kit.fontawesome.com/8f09816da3.js"></script>
 </head>
 
 <body class="home header-has-img loading">
@@ -341,8 +342,10 @@
                                         class="rsicon rsicon-twitter"></i></a></li> -->
                                 <li><a class="ripple-centered" href="www.linkedin.com/in/ryan-weingart" target="_blank"><i
                                         class="rsicon rsicon-linkedin"></i></a></li>
-                                <!-- <li><a class="ripple-centered" href="https://plus.google.com" target="_blank"><i
-                                        class="rsicon rsicon-google-plus"></i></a></li> -->
+                                <li><a class="ripple-centered" href="https://plus.google.com" target="_blank"><i
+                                        class="rsicon fab fa-github"></i>
+
+                                    </a></li>
                                 <!-- <li><a class="ripple-centered" href="https://dribbble.com" target="_blank"><i
                                         class="rsicon rsicon-dribbble"></i></a></li> -->
                                 <!-- <li><a class="ripple-centered" href="https://www.instagram.com" target="_blank"><i
@@ -1251,7 +1254,7 @@
                                     </li>
                                     <li class="clearfix">
                                         <strong>phone</strong>
-                                        <span><a href="tel:+12562548456">(815) 236-7144</a></span>
+                                        <span><a href="tel:8152367144">(815) 236-7144</a></span>
                                     </li>
                                     <li class="clearfix">
                                         <strong>E-mail</strong>
@@ -1279,7 +1282,7 @@
                 <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-twitter"></i></a></li> -->
                 <li><a class="ripple-centered" href="www.linkedin.com/in/ryan-weingart" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
-                <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-google-plus"></i></a></li> -->
+                <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon fab fa-github"></i></a></li>
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-dribbble"></i></a></li> -->
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li> -->
             </ul>
