linked github and linkedin

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Ryan Weingart</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/ico" href="rscard/img/favicon.png"/>
-
+    <link rel="apple-touch-icon" sizes="180x180" href="rscard/favicon_io (5)/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="rscard/favicon_io (5)/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="rscard/favicon_io (5)/favicon-16x16.png">
+    <link rel="manifest" href="rscard/favicon_io (5)/site.webmanifest">
     <!-- Google Fonts -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fredoka+One">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic">
@@ -237,7 +239,7 @@
 
     <div class="wrapper">
         <header class="header">
-            <div class="head-bg" style="background-image: url('rscard/img/uploads/rs-cover.jpg')"></div>
+            <div class="head-bg" style="background-image: url('rscard/img/farmstead-1.jpg')"></div>
         
             <div class="head-bar">
                 <div class="head-bar-inner">
@@ -316,11 +318,11 @@
                                         </li>
                                         <li class="clearfix">
                                             <strong class="title">E-mail</strong>
-                                            <span class="cont"><a href="mailto:robertsmith@company.com">rmweingart5@gmail.com</a></span>
+                                            <span class="cont"><a href="mailto:rmweingart5@gmail.com">rmweingart5@gmail.com</a></span>
                                         </li>
                                         <li class="clearfix">
                                             <strong class="title">Phone</strong>
-                                            <span class="cont"><a href="tel:+12562548456">(815) 236-7144</a></span>
+                                            <span class="cont"><a href="tel:8152367144">(815) 236-7144</a></span>
                                         </li>
                                         <!-- <li class="clearfix">
                                             <strong class="title">Freelance</strong>
@@ -340,9 +342,9 @@
                                         class="rsicon rsicon-facebook"></i></a></li>
                                 <!-- <li><a class="ripple-centered" href="https://twitter.com" target="_blank"><i
                                         class="rsicon rsicon-twitter"></i></a></li> -->
-                                <li><a class="ripple-centered" href="www.linkedin.com/in/ryan-weingart" target="_blank"><i
+                                <li><a class="ripple-centered" href="https://www.linkedin.com/in/ryan-weingart/" target="_blank"><i
                                         class="rsicon rsicon-linkedin"></i></a></li>
-                                <li><a class="ripple-centered" href="https://plus.google.com" target="_blank"><i
+                                <li><a class="ripple-centered" href="https://github.com/ryanweingart" target="_blank"><i
                                         class="rsicon fab fa-github"></i>
 
                                     </a></li>
@@ -1281,8 +1283,8 @@
             <ul class="social">
                 <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-facebook"></i></a></li>
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-twitter"></i></a></li> -->
-                <li><a class="ripple-centered" href="www.linkedin.com/in/ryan-weingart" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
-                <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon fab fa-github"></i></a></li>
+                <li><a class="ripple-centered" href="https://www.linkedin.com/in/ryan-weingart/" target="_blank"><i class="rsicon rsicon-linkedin"></i></a></li>
+                <li><a class="ripple-centered" href="https://github.com/ryanweingart" target="_blank"><i class="rsicon fab fa-github"></i></a></li>
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-dribbble"></i></a></li> -->
                 <!-- <li><a class="ripple-centered" href="" target="_blank"><i class="rsicon rsicon-instagram"></i></a></li> -->
             </ul>
