added description and picture to crystal collector game

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 <div class="grid-item size11 game">
                     <div class="grid-box">
                         <figure class="portfolio-figure">
-                            <img src="rscard/img/uploads/portfolio/portfolio-thumb-05-610x600.jpg" alt=""/>
+                            <img src="rscard/img/Screen Shot 2019-08-03 at 6.11.06 PM.png" alt=""/>
                             <figcaption class="portfolio-caption">
                                 <div class="portfolio-caption-inner">
                                     <h3 class="portfolio-title">Crystal Collector</h3>
@@ -497,14 +497,16 @@
                         </figure>
             
                         <!-- Start: Portfolio Inline Boxes -->
-                        <!-- <div id="portfolio1-inline1" class="fancybox-inline-box">
+                        <div id="portfolio1-inline1" class="fancybox-inline-box">
                             <div class="inline-embed" data-embed-type="image"
-                                 data-embed-url="img/Screen Shot 2019-08-03 at 6.11.06 PM.png"></div>
+                                 data-embed-url=""></div>
                             <div class="inline-cont">
-                                <h2 class="inline-title">Need to add header.</h2>
+                                <h2 class="inline-title">Crystal Collector</h2>
             
                                 <div class="inline-text">
-                                    <p>Need to add description.</p>
+                                    <p>Welcome to Crystal Collector! The goal of this game is to match the number that the computer picks for you by clicking the provided crystals. The computer picks a random number and displays it on the screen. Each crystal in the crystal box has its own hidden numerical value that will add to your score. Remember the value of each crystal you choose and choose each crystal wisely! If you go beyond the computer's number, you lose!</p>
+
+                                    <a href="https://github.com/ryanweingart/Unit-4-Game" target="_blank"><strong>CLICK HERE TO VIEW CODE</strong></a>
                                 </div>
                             </div>
                         </div>
@@ -531,7 +533,7 @@
                                     <p>Add description</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- End: Portfolio Inline Boxes -->
                     </div>
                 </div>
