--- a/index.html
+++ b/index.html
@@ -461,8 +461,8 @@
                 <div class="filter-inner">
                     <div class="filter-btn-group">
                         <button data-filter="*">All</button>
-                        <button data-filter=".photography">Games</button>
-                        <button data-filter=".nature">Applications</button>
+                        <button data-filter=".game">Games</button>
+                        <button data-filter=".application">Applications</button>
                     </div>
                     <div class="filter-bar">
                         <span class="filter-bar-line"></span>
