--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
                                     </li>
                                 </ul>
             
-                                <div id="map" data-latitude="50.84592" data-longitude="4.366859999999974"></div>
+                                <!-- <div id="map" data-latitude="50.84592" data-longitude="4.366859999999974"></div> -->
                             </div>
                         </div>
                     </div>
